[package]
name = "oxygenlance"
version = "1.0.0"
authors = ["Rimi Kanokawa <rimi@rimin.moe>"]
edition = "2021"

description = "A simple crate to run BF Joust matches in Rust."

documentation = "https://docs.rs/oxygenlance/"
repository = "https://github.com/Lymia/oxygenlance"
readme = "README.md"

license = "MIT"

[dependencies]
thiserror = "1.0.65"
rayon = "1.10.0"

[build-dependencies]
cc = "1.1.31"

[dev-dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
rayon = "1.10.0"
